# HenryScripts-core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/: SolUtils.cpp  XInputHandler.cpp
src/headers/: SolUtils.h  XInputHandler.h
